Добавил новый контроллер, для устрановки url видео в лобби
