# src/internal/models/videoLobby.go
@@ -1,0 +1,6 @@
+package models
+
+type VideoLobby struct {
+	VideoURL string `json:"video_url"`
+	LobbyID  string `json:"lobby_id"`
+}
